<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">WikiPapers</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="search_notes">Search Notes</string>
    <string name="all_notes">All Notes</string>
    <string name="add_note">New Note</string>
    <string name="search_hint">Search for Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="return_button">Return</string>
    <string name="create_note">Create Note</string>
    <string name="cancel">Cancel</string>
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="settings">Settings</string>
    <string name="view_stats">Statistics</string>

    <string name="pref_username">Click to set the username</string>
    <string name="pref_sync">Allow connection with SNMP manager</string>
    <!-- <string name="pref_clean">Delete all notes</string> -->
    
    <string name="preference_file_id">StatsPreferences</string>
    
</resources>

