<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
   
   <item android:id="@+id/search_notes"
          android:title="@string/search_notes"
          android:icon="@drawable/ic_action_search"
          yourapp:showAsAction="ifRoom"
          yourapp:actionViewClass="android.support.v7.widget.SearchView" />
   
   <item
      android:id="@+id/add_note"
      android:title="@string/add_note"
      android:icon="@drawable/ic_action_new_event"
      yourapp:showAsAction="ifRoom|withText" >
   </item>

  <item 
      android:id="@+id/edit_note"
      android:title="@string/edit_note"
      android:icon="@drawable/ic_action_edit"
      yourapp:showAsAction="ifRoom|withText">
   </item>
   
   <item
      android:id="@+id/delete_note"
      android:title="@string/delete_note"
      android:icon="@drawable/ic_action_discard"
      yourapp:showAsAction="ifRoom|withText"  >
   </item>
   
   <item
      android:id="@+id/all_notes"
      android:title="@string/all_notes"
      android:icon="@drawable/ic_action_view_as_list"
      yourapp:showAsAction="ifRoom|withText"  >
   </item>
   
   <item
      android:id="@+id/save_note"
      android:title="@string/save_note"
      android:icon="@drawable/ic_action_save"
      yourapp:showAsAction="ifRoom|withText" >
   </item>

   <item 
      android:id="@+id/return_button"
      android:title="@string/return_button"
      android:icon="@drawable/ic_action_undo"
      yourapp:showAsAction="ifRoom|withText">
   </item>
     
</menu>
