<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
   
   <item android:id="@+id/search_notes"
          android:title="@string/search_notes"
          android:icon="@drawable/ic_action_search2"
          yourapp:showAsAction="ifRoom"
          yourapp:actionViewClass="android.support.v7.widget.SearchView" />
   
   <item
      android:id="@+id/add_note"
      android:title="@string/add_note"
      android:icon="@drawable/ic_action_new_event"
      yourapp:showAsAction="ifRoom|withText" >
   </item>

   <item
      android:id="@+id/all_notes"
      android:title="@string/all_notes"
      android:icon="@drawable/ic_action_view_as_list"
      yourapp:showAsAction="ifRoom|withText"  >
   </item>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        yourapp:showAsAction="ifRoom|withText"  >
    </item>

    <item
        android:id="@+id/view_stats"
        android:title="@string/view_stats"
        android:icon="@drawable/ic_action_stats"
        yourapp:showAsAction="ifRoom|withText"  >
    </item>
  
</menu>